# pyden

./: .gitignore  README.md  pyproject.toml
notebooks/: math_playground.ipynb
